* executor: tweak shutdown handling, print all tasks not complete
Signed-off-by: neo <1100909+neowu@users.noreply.github.com>